Kubernets-YAML/laravel.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-deploy
  labels:
    app: laravel
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: laravel
    spec:
      containers:
      - name: laravel
        image: soumenbiswas212/kubernets-laravel:v1
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: mysecret
  selector:
    matchLabels:
      app: laravel
---
apiVersion: v1
kind: Service
metadata:
  name: laravel
spec:
  selector:
    app: laravel

  ports:
    - port: 80
      targetPort: 80
